<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".agregarAlumno">

    <include
        android:id="@+id/toolbarAgregar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/toolbarAgregar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="104dp"
                android:layout_height="43dp"
                android:gravity="center"
                android:text="@string/txtNombreA"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/edTxtNombre"
                app:layout_constraintHorizontal_bias="0.615"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.043" />

            <EditText
                android:id="@+id/edTxtNombre"
                android:layout_width="238dp"
                android:layout_height="49dp"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/txtNombreA"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.751"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.043" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="104dp"
                android:layout_height="43dp"
                android:gravity="center"
                android:text="@string/txtUsuarioA"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/edTxtUsuario"
                app:layout_constraintHorizontal_bias="0.615"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.037" />

            <EditText
                android:id="@+id/edTxtUsuario"
                android:layout_width="238dp"
                android:layout_height="49dp"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/txtUsuarioA"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.751"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edTxtNombre"
                app:layout_constraintVertical_bias="0.029" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="104dp"
                android:layout_height="43dp"
                android:gravity="center"
                android:text="@string/txtIpA"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/edTxtIp"
                app:layout_constraintHorizontal_bias="0.615"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.044" />

            <EditText
                android:id="@+id/edTxtIp"
                android:layout_width="238dp"
                android:layout_height="49dp"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/txtIpA"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.751"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edTxtUsuario"
                app:layout_constraintVertical_bias="0.031" />

            <RadioGroup
                android:id="@+id/rdGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.054">

                <RadioButton
                    android:id="@+id/rdBtnPC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/rdBtnPC" />

                <RadioButton
                    android:id="@+id/rdBtnLaptop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/rdBtnLaptop" />

            </RadioGroup>

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="185dp"
                android:layout_height="58dp"
                android:text="@string/btnGuardar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rdGroup"
                app:layout_constraintVertical_bias="0.22" />

            <Button
                android:id="@+id/btnSalir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSalir"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.049"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnGuardar"
                app:layout_constraintVertical_bias="0.734" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="104dp"
                android:layout_height="43dp"
                android:layout_marginBottom="396dp"
                android:text="@string/txtMaquina"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edTxtIp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>